Fix state issue with blurring

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ nav {
 
 #image-counter {
   color: #000000;
-  font-size: 32px;
+  font-size: 24px;
   padding: 16px;
 }
 
